fix(ui): further reduce large empty gaps between file structure elements
Further adjustments were made to reduce the large empty gaps between file structure elements during scrolling.

Resolves issue #7.

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 div.nav-files-container > div {
 	min-height: 0 !important;
 
-	& > div:nth-child(1) {
+	& > div {
 		margin-bottom: 0 !important;
 	}
 }
@@ -15,6 +15,10 @@ div.tree-item-children.nav-folder-children {
 	min-height: 0 !important;
 }
 
-div.tree-item-children.nav-folder-children > div:nth-child(1) {
+div.tree-item-children.nav-folder-children > div {
+	margin-bottom: 0 !important;
+}
+
+div.tree-item {
 	margin-bottom: 0 !important;
 }
